Fix collapsables

--- a/src/scss/components/create-card.scss
+++ b/src/scss/components/create-card.scss
@@ -15,15 +15,6 @@
   }
 }
 
-// Estilos para collapsables
-
-// Por defecto, el contenido está oculto 
-.collapsible__content {
-  display: none;
-  transition: max-height 0.3s ease-in-out;
-  overflow: hidden;
-}
-
 // Cuando tiene la clase is-open, se muestra 
 .collapsible__content.is-open {
   display: block;
@@ -81,7 +72,6 @@
   &__blocks {
     display: flex;
     flex-direction: column;
-    margin-top: 1rem;
   }
 
   &__icon {
@@ -93,8 +83,12 @@
   }
 
   &__content {
-    padding-inline: 1rem;
+    display: none;
+  }
+
+  &__content.is-open {
     display: flex;
+    padding-inline: 1rem;
     flex-direction: column;
     font-family: $fontfamily-subtitle;
   }
